Media query for Navbar, section1, section2 and section3

--- a/package.json
+++ b/package.json
@@ -9,13 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-<<<<<<< HEAD
-    "vue": "^3.3.4",
-    "vuex": "^4.0.2"
-=======
     "axios": "^1.5.0",
-    "vue": "^3.3.4"
->>>>>>> 53217e5c3d4c628ee9eced6be12599b39748358d
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
